Lot of reorganizing: Moved ubm-gmm and ivector out of master.py. No need to  give feature dimensions for every step as parameter. Lot of other changes.

--- a/default.cfg
+++ b/default.cfg
@@ -19,17 +19,12 @@ mfcc_pre : 0.97
 # Tell whether MFCC or LFCC are extracted
 mfcc_mel : True
 
-#Kmeans machine parameters
-kmeans_num_gauss :  19
-kmeans_dim :  19
-
-#GMM stats parameters
-gmm_stat_num_gauss : 19
-gmm_stat_dim : 19
+number_of_gaussians : 16
+feature_dimensions : 19
 
 #Ivector machine parameters
 ivec_machine_variance_treshold: !!float 1e-5
-ivec_machine_dim : 19
+ivec_machine_dim : 200
 
 #Ivector trainer parameters
 ivec_trainer_max_iterations : 10
@@ -40,11 +35,5 @@ map_gmm_relevance_factor : 4
 map_gmm_convergence_threshold: !!float 1e-5
 map_gmm_max_iterations : 200
 
-#Parameters for map adapted gmm machine
-gmm_adapted_num_gauss : 19
-gmm_adapted_dim : 19
-
-ubm_gmm_num_gauss : 19
-ubm_gmm_dim : 19
 ubm_convergence_threshold: !!float 1e-4
 ubm_max_iterations : 10
