Cleanup, renaming variables, reimplemented running ubm-gmm and ivec in same run.

--- a/default.cfg
+++ b/default.cfg
@@ -1,3 +1,5 @@
+#possible values: all, ivector, ubm-gmm
+run_mode: all
 
 #MFCC feature extraction parameters
 #The window length in milliseconds
@@ -6,7 +8,7 @@ mfcc_wl : 20
 mfcc_ws : 10
 # The number of filter bands
 mfcc_nf : 24
-# The number of cepstral coefficients
+# The number of cepstral coefficients (feature dimensions)
 mfcc_nceps : 19
  # The minimal frequency of the filter bank
 mfcc_fmin : 0.
@@ -20,11 +22,10 @@ mfcc_pre : 0.97
 mfcc_mel : True
 
 number_of_gaussians : 16
-feature_dimensions : 19
 
-#Ivector machine parameters
+#Ivector machine (T matrix) parameters
 ivec_machine_variance_treshold: !!float 1e-5
-ivec_machine_dim : 200
+ivec_machine_dim : 400
 
 #Ivector trainer parameters
 ivec_trainer_max_iterations : 10
@@ -35,5 +36,5 @@ map_gmm_relevance_factor : 4
 map_gmm_convergence_threshold: !!float 1e-5
 map_gmm_max_iterations : 200
 
-ubm_convergence_threshold: !!float 1e-4
-ubm_max_iterations : 10
+ubm_trainer_convergence_threshold: !!float 1e-4
+ubm_trainer_max_iterations : 10
